feat(worldgen): add finite load spawn rebuild workflow